<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings activity -->
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_label">Sort By</string>
    <string name="pref_sort_label_popularity">Most Popular</string>
    <string name="pref_sort_label_rate">Highest Rated</string>
    <string name="pref_sort_label_favorite">Favorite</string>
    <string name="pref_sort_popularity" translatable="false">popularity</string>
    <string name="pref_sort_rate" translatable="false">vote_average</string>
    <string name="pref_sort_favorite" translatable="false">favorite</string>

    <!-- Detail activity -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="placeholder_movie_title">[Movie Title]</string>
    <string name="placeholder_movie_year">[Movie Year]</string>
    <string name="placeholder_movie_rate">[Movie Rate]</string>
    <string name="placeholder_movie_overview">[Movie Overview]</string>
    <string name="trailers_label">Trailers</string>
    <string name="no_trailers_message">No trailers found</string>
    <string name="reviews_label">Reviews</string>
    <string name="no_reviews_message">No Reviews found</string>

    <!-- Custom keys to be used for sending extra data over intents -->
    <string name="EXTRA_MOVIE">com.arminsam.popularmovies.MOVIE</string>
</resources>
