<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:text="@string/placeholder_movie_title"
              android:id="@+id/movie_title"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="32dp"
              android:paddingBottom="32dp"
              android:background="@color/green_bg"
              android:textColor="@color/white"/>

    <ScrollView android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:padding="5dp">

        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:background="@color/light_gray">

                <LinearLayout android:orientation="horizontal"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center_horizontal"
                              android:paddingLeft="16dp"
                              android:paddingTop="16dp"
                              android:paddingRight="16dp"
                              android:paddingBottom="16dp">

                    <ImageView android:id="@+id/movie_poster"
                               android:layout_width="fill_parent"
                               android:layout_height="wrap_content"
                               android:layout_weight="5"
                               android:scaleType="fitStart"
                               android:adjustViewBounds="true" />

                    <LinearLayout android:orientation="vertical"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:layout_weight="3"
                                  android:paddingLeft="32dp">

                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                  android:text="@string/placeholder_movie_year"
                                  android:id="@+id/movie_year"
                                  android:textColor="@color/medium_gray"
                                  android:textStyle="bold"/>

                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textAppearance="?android:attr/textAppearanceMedium"
                                  android:text="@string/placeholder_movie_rate"
                                  android:id="@+id/movie_rate"
                                  android:textStyle="italic"
                                  android:background="@color/green_bg"
                                  android:textColor="@color/white"
                                  android:padding="6dp"
                                  android:layout_marginTop="6dp"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/placeholder_movie_overview"
                          android:id="@+id/movie_overview"
                          android:paddingLeft="16dp"
                          android:paddingRight="16dp"
                          android:paddingBottom="16dp"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:background="@color/light_gray"
                          android:layout_marginTop="5dp"
                          android:baselineAligned="true">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceMedium"
                          android:text="@string/trailers_label"
                          android:padding="16dp"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceSmall"
                          android:text="@string/no_trailers_message"
                          android:padding="16dp"
                          android:id="@+id/no_trailers_message"
                          android:visibility="gone"/>

                <LinearLayout android:id="@+id/trailers_list"
                              android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:orientation="vertical"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:background="@color/light_gray"
                          android:layout_marginTop="5dp"
                          android:baselineAligned="true">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceMedium"
                          android:text="@string/reviews_label"
                          android:padding="16dp"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceSmall"
                          android:text="@string/no_reviews_message"
                          android:padding="16dp"
                          android:id="@+id/no_reviews_message"
                          android:visibility="gone"/>

                <LinearLayout android:id="@+id/reviews_list"
                              android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:orientation="vertical"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>